--- a/src/app/missionlist/missionlist.component.css
+++ b/src/app/missionlist/missionlist.component.css
@@ -3,7 +3,7 @@
 }
 
 .card {
-  background-color: #e0e0ff;
+  background-color: #2fddcf;
   margin-bottom: 10px;
   padding: 10px;
   border-radius: 1rem;
