--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -3,7 +3,7 @@ a {
   color: #ffffff; 
   text-decoration: none; 
   margin-left: 20px;
-  background-color: #9c27b0; 
+  background-color: #2fddcf; 
   border-radius: 5px; 
   padding: 8px 16px; 
   font-weight: bold; 
@@ -11,7 +11,7 @@ a {
 }
 
 a:hover {
-  color: #673ab7; 
+  color: #2fddcf; 
   background-color: #eceff1; 
   font-weight: bold; 
   transform: scale(1.05); }
