--- a/src/app/missiondetails/missiondetails.component.css
+++ b/src/app/missiondetails/missiondetails.component.css
@@ -10,7 +10,7 @@
 }
 
 h2 {
-    color: #9c27b0;
+    color: #2fddcf;
     transition: color 0.3s ease; 
     cursor: pointer; 
 }
@@ -21,7 +21,7 @@ h2:hover {
 
 
 .card {
-    background-color: #e8eaf6; 
+    background-color: #2fddcf; 
     padding: 10px;
     border-radius: 8px; 
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); 
